--- a/tenyears/templates/base.html
+++ b/tenyears/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles i18n %}<!DOCTYPE html>
+{% load render_bundle from webpack_loader %}{% load staticfiles i18n %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -53,6 +53,7 @@
 
     {% block modal %}{% endblock modal %}
 
+    {% render_bundle 'main' %}
     {% block javascript %}
     {% endblock javascript %}
   </body>
