--- a/decadegraphy/templates/base.html
+++ b/decadegraphy/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}10 Years{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %} Decadegraphy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -21,25 +21,7 @@
   </head>
 
   <body>
-    {% if request.user.is_authenticated %}
-      <li class="nav-item">
-        {# URL provided by django-allauth/account/urls.py #}
-        <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
-      </li>
-      <li class="nav-item">
-        {# URL provided by django-allauth/account/urls.py #}
-        <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
-      </li>
-    {% else %}
-      <li class="nav-item">
-        {# URL provided by django-allauth/account/urls.py #}
-        <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
-      </li>
-      <li class="nav-item">
-        {# URL provided by django-allauth/account/urls.py #}
-        <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
-      </li>
-    {% endif %}
+    {% if request.user.is_authenticated %}{% endif %}
 
     {% if messages %}
         {% for message in messages %}
@@ -47,9 +29,7 @@
         {% endfor %}
     {% endif %}
 
-    {% block content %}
-      <p>Content</p>
-    {% endblock content %}
+    {% block content %}{% endblock content %}
 
     {% block modal %}{% endblock modal %}
 
