--- a/decadegraphy/static/css/main.scss
+++ b/decadegraphy/static/css/main.scss
@@ -1,12 +1,7 @@
 @import './normalize.css';
 body{ max-width: 960px; margin: 0 auto; }
-*, *:before, *:after {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
 
-form { max-width: 300px; margin: 10px auto; padding: 10px 20px; }
+form { margin: 10px auto; padding: 10px 20px; }
 
 h1 { text-align: center; }
 
@@ -21,26 +16,27 @@ input[type="tel"],
 input[type="time"],
 input[type="url"],
 textarea,
-select { margin-top: 5px; padding: 15px; border: none; width: 100%; height: auto; font-size: 16px; outline: 0; color: #8a97a0; box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset; }
-.places select{ width: 30%; }
-
-input[type="radio"],
-input[type="checkbox"] { margin: 0 10px 8px 0; }
+select { border: 1px solid #dedede; font-size: 16px; outline: 0; color: #333; }
 
 select { padding: 6px; height: 32px; border-radius: 2px; }
 
-a.button, button { padding: 19px 39px 18px 39px; color: #fff; background-color: #333; font-size: 18px; text-align: center; font-style: normal; border-radius: 5px; border: 1px solid #999; border-width: 1px 1px 3px; box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset; margin-bottom: 10px; }
+a.button, button { padding: 0; appearance: none; -webkit-appearance: none; background-color: #fff; 
+	&:focus{ outline: none; }
+}
 
 fieldset { margin-bottom: 30px; border: none; }
-
-label { display: block; margin-bottom: 18px;}
 
 .icon { background-color: #303030; color: #fff; height: 30px; width: 30px; display: inline-block; font-size: 0.8em; margin-right: 14px; line-height: 30px; text-align: center; text-shadow: 0 1px 0 rgba(255,255,255,0.2); border-radius: 100%; }
 
 // global className
 .dg-enroll-title{ color: #333; font-size: 28px; text-align: center; }
 .dg-button{ display: block; width: 90px; line-height: 40px; border: 1px solid #666; color: #333; text-align: center; }
+.dg-cf{
+	&:before{ content: ''; display: table; }
+	&:after{ content: ''; display: table; clear: both; }
+}
 
+// role selection
 .page-one{ width: 460px; margin: 0 auto; padding-left: 110px;
 	.subtitle{ color: #333; font-size: 16px; font-weight: normal; white-space: nowrap;
 		.notice{ margin-left: 80px; font-size: 13px; color: #199ED8; }
@@ -48,8 +44,66 @@ label { display: block; margin-bottom: 18px;}
 	.dg-button{ margin: 70px auto 0; }
 }
 
-@media screen and (min-width: 480px) {
-	form {
-			max-width: 640px;
+// fill info
+.fill-role-info{ padding-left: 31%;
+	textarea{ width: 314px; height: 135px; border: 1px solid #dedede; vertical-align: text-top; }
+	.subtitle{ width: 98px; font-size: 16px; color: #333; font-weight: 400; text-align: right; white-space: nowrap; }
+	.field-name{ display: inline-block; width: 98px; margin-right: 20px; font-size: 13px; color: #333; font-weight: 400; text-align: right; 
+		&.special{ float: left; line-height: 30px; }
+	}
+	.optional-places{ position: relative; float: left; 
+		.places{ margin-bottom: 10px; }
+		.optional-places-action{ position: absolute; right: -88px; top: 0; }
+	}
+	.field{ width: 180px; line-height: 30px; font-size: 13px; }
+	.state-code{ width: 30px; line-height: 30px; margin: 0 1px; appearance: none; -webkit-appearance: none; vertical-align: bottom; }
+	.field-mobile{ width: 138px; }
+	.select-age{ width: 150px; height: 30px; border: 1px solid #666; background-color: #fff; 
+		option{ color: #333; }
+	}
+	.word-count{ padding-right: 29%; text-align: right; }
+	.bind-twitter{ box-sizing: border-box; width: 127px; height: 35px; border: 1px solid #333; padding-left: 40px; font-size: 13px; }
+	.dg-button-group{ margin-top: 50px;
+		.pre-step{ float: left; }
+		.submit,
+		.next-step{ float: right; }
+	}
+	.timepicker{ overflow: hidden;
+		.tip{ line-height: 30px; font-size: 13px; color: #666; }
+		.timepicker-table{ border-collapse:collapse; border: 1px solid #eee; font-size: 13px; color: #333;
+			thead{ border-bottom: 1px solid #999;
+				tr{ height: 31px;
+					th{
+						&:first-child{ border-right: 1px solid #eee; }
+					}
+				}
+			}
+			th{ width: 60px; }
+			tbody{
+				tr{ border: 1px solid #eee; 
+					td{
+						&:first-child{ border-right: 1px solid #eee; }
+					}
+				}
+			}
+			td{ width: 30px; height: 30px; vertical-align: middle; text-align: center;}
+		}
+	}
+	.places{ 
+		select{ width: 98px; margin-right: 10px; line-height: 30px; }
+	}
+}
+
+// enroll success
+.enroll-success{ width: 500px; margin: 0 auto; padding-left: 8%;
+	.success-icon{ width: 51px; height: 51px; margin-right: 20px; float: left; background-color: #ccc; }
+	.content{ overflow: hidden; 
+		p{ margin: 0 0 10px; font-size: 20px; }
+	}
+	.qrcode{ margin: 20px 0 0; padding: 0;
+		li{ display: inline-block; margin-right: 20px; list-style: none; text-align: center;
+			img{ display: block; width: 98px; height: 98px; background-color: #ccc; }
+			span{ font-size: 13px; }
+		}
 	}
 }
