Polish role choice

--- a/decadegraphy/static/css/global.scss
+++ b/decadegraphy/static/css/global.scss
@@ -15,6 +15,7 @@ h1, h2, h3 {
   text-align: center;
   color: #fff;
   margin: 0;
+  margin-top: 60px;
 }
 
 .dg-button {
@@ -23,4 +24,5 @@ h1, h2, h3 {
   color: #fff;
   cursor: pointer;
   font-weight: 500;
+  background: transparent;
 }
