--- a/decadegraphy/static/css/signup.scss
+++ b/decadegraphy/static/css/signup.scss
@@ -1,10 +1,15 @@
 .sign-up {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  padding-top: 60px;
   
   .page-one {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 980px;
-    margin: 80px auto 0;
+    margin: 0 auto;
   }
 
   .subtitle {
@@ -16,15 +21,19 @@
   .form-item-group {
     display: flex;
     justify-content: space-between;
+    width: 100%;
     margin: 40px auto;
   }
 
   .role {
     flex: 1;
     text-align: center;
+    margin: 16px;
+    padding: 32px 16px;
+    box-sizing: border-box;
 
     &.active {
-      border-bottom: 1px solid #fff;
+      border: 1px solid #fff;
     }
 
     .title {
