--- a/decadegraphy/static/css/global.scss
+++ b/decadegraphy/static/css/global.scss
@@ -11,6 +11,29 @@ h1, h2, h3 {
   font-weight: 300;
 }
 
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+input,
+textarea,
+select { 
+  margin: .25em 0;
+  padding: .5em .6em;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 3px #ddd;
+  border-radius: 2px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
 .dg-enroll-title {
   text-align: center;
   color: #fff;
