--- a/decadegraphy/static/css/main.scss
+++ b/decadegraphy/static/css/main.scss
@@ -1,29 +1,9 @@
 @import './normalize.css';
 @import './global.scss';
 @import './signup.scss';
-// body{ max-width: 960px; margin: 0 auto; }
 
-// form { margin: 10px auto; padding: 10px 20px; }
-
-// h1 { text-align: center; }
-
-// input[type="text"],
-// input[type="password"],
-// input[type="date"],
-// input[type="datetime"],
-// input[type="email"],
-// input[type="number"],
-// input[type="search"],
-// input[type="tel"],
-// input[type="time"],
-// input[type="url"],
-// textarea,
-// select { border: 1px solid #dedede; font-size: 16px; outline: 0; color: #333; }
-
-// select { padding: 6px; height: 32px; border-radius: 2px; }
-
-// a.button, button { padding: 0; appearance: none; -webkit-appearance: none; background-color: #fff; 
-// 	&:focus{ outline: none; }
+// select { 
+//   padding: 6px; height: 32px; border-radius: 2px; 
 // }
 
 // fieldset { margin-bottom: 30px; border: none; }
