--- a/decadegraphy/static/css/signup.scss
+++ b/decadegraphy/static/css/signup.scss
@@ -1,15 +1,19 @@
 .sign-up {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   
-  .page-one {
+  .page-one,
+  .page-two {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 980px;
     margin: 0 auto;
+  }
+
+  .hide {
+    display: none;
   }
 
   .subtitle {
@@ -34,6 +38,7 @@
 
     &.active {
       border: 1px solid #fff;
+      border-radius: 4px;
     }
 
     .title {
@@ -50,5 +55,37 @@
 
   .page-one-submit {
     text-align: right;
+  }
+
+  .fill-role-info {
+
+  }
+
+  .field-item {
+    display: flex;
+    align-items: center;
+    margin: 16px 0;
+  }
+
+  .field-name {
+    text-align: right;
+    display: inline-block;
+    vertical-align: middle;
+    width: 10em;
+    margin: 0 1em 0 0;
+  }
+
+  .field {
+
+  }
+
+  .state-code {
+    width: 40px;
+    margin-right: -1px;
+  }
+
+  .note {
+    width: 360px;
+    height: 120px;
   }
 }
