Fix react warning

--- a/decadegraphy/static/css/signup.scss
+++ b/decadegraphy/static/css/signup.scss
@@ -66,6 +66,9 @@
   .field {
     margin-right: 1em;
   }
+  select.field {
+    width: 120px;
+  }
   .bind-twitter,
   .twitter-name {
     color: #fff;
