Polish success page

--- a/decadegraphy/static/css/global.scss
+++ b/decadegraphy/static/css/global.scss
@@ -10,6 +10,8 @@ h1, h2, h3 {
   font-weight: 300;
 }
 
+[hidden] { display: none; }
+
 input[type="text"],
 input[type="password"],
 input[type="date"],
