Create new branch

--- a/decadegraphy/static/css/main.scss
+++ b/decadegraphy/static/css/main.scss
@@ -1,44 +1,2 @@
 @import './normalize.css';
-@import './global.scss';
-@import './signup.scss';
-@import './success.scss';
-
-// @media(max-width: 500px){
-//   form{ margin: 0; padding: 0; }
-//   .sign-up{ width: 100%; overflow: hidden; text-align: center; 
-//     .enroll-success{ width: auto; padding: 0; text-align: center;
-//       .success-icon{ display: block; float: none; margin: 0 auto 20px; }
-//     }
-//   }
-//   .page-one{ width: 100%; margin: 0; padding-left: 0;
-//     .form-item-group{ width: 280px; margin: 0 auto; text-align: left; }
-//     .subtitle{
-//       .notice{ display: block; margin: 10px 0 5px; }
-//     } 
-//   }
-//   .fill-role-info{ width: 100%; padding-left: 0; 
-//     .subtitle{ margin: 0 auto; }
-//     .field-item{ position: relative; padding: 20px 10px 0 0; text-align: left;
-//       .planned-date-delimiter{ display: block; margin-left: 98px; padding: 10px 0; }
-//       .field-name{ position: absolute; top: 0; left: 0; 
-//         &.primary-place{ width: 126px; }
-//       }
-//       .hobby-selection,
-//       .select-age,
-//       .bind-twitter,
-//       .twitter-name,
-//       .tel-content{ margin-left: 98px; }
-//       .field{ margin-left: 98px; 
-//         &.field-mobile{ margin-left: 0; }
-//       }
-//       .planned-date{ display: block; margin: 0 98px; }
-//       .places{ margin-top: 20px; text-align: center; }
-//       .optional-places{ float: none; 
-//         .optional-places-action{ position: static; text-align: center; }
-//       }
-//       textarea{ display: block; margin: 0 auto; }
-//       .timepicker{ padding: 10px; }
-//     }
-//     .dg-button{ float: none !important; margin: 0 auto 10px; }
-//   }
-// }
+@import './front.scss';
