--- a/static/css/front.scss
+++ b/static/css/front.scss
@@ -193,7 +193,7 @@ body {
     position: fixed;
     top: 1.4%;
     right: 3%;
-    z-index: 3;
+    z-index: 4;
     font-size: 27px;
     color: #fff;
     cursor: pointer;
@@ -286,6 +286,25 @@ body {
         height: 30px;
         background-size: 32px 30px;
       }
+      @media (max-width: 767px) {
+        position: fixed;
+        top: 0;
+        left: 18px;
+        z-index: 3;
+        padding-top: 14px;
+        width: 100%;
+        height: 44px;
+        text-align: left;
+        font-size: 11px;
+        a { margin-right: 16px ;}
+        i[class^=icon] {
+          width: 13px;
+          height: 14px;
+          background-size: 13px 12px;
+          vertical-align: bottom;
+        }
+      }
+
     }
   }
 }
